@startuml
'Alice -> Bob: Authentication Request
'Bob --> Alice: Authentication Response
'
'Alice -> Bob: Another authentication Request
'Alice <-- Bob: another authentication Response

package "Entities" #FFF {
    class User {
        {field} id: int
        {field} firstname: string
        {field} lastname: string
        {field} email: string
        {field} password: string
        {field} createdAt: DateTimeInterface
        {field} role: array
        {field} gender: relation
        {field} addresses: relation
        {field} comments: relation
        {field} dislikes: relation
        {field} likes: relation
    }
    class Address {
        {field} id: int
        {field} line1: int
        {field} line2: int
        {field} city: relation
    }
    class Cart {
        {field} id: int
        {field} consumer: relation
        {field} cartItems: relation
    }
    class CartItem {
        {field} id: int
        {field} quantity: int
    }
    class Category {
        {field} id: int
        {field} name: string
    }
    class City {
        {field} id: int
        {field} name: string
        {field} zipCode: string
    }
    class Comment {
        {field} id: int
        {field} content: text
        {field} commentedAt: dateTimeInterface
    }
    class DisLike {
        {field} id: int
        {field} dislikeAt: dateTimeInterface
    }
    class Gender {
        {field} id: int
        {field} name: string
    }
    class Image {
        {field} id: int
        {field} title: string
        {field} url: string
        {field} users: relation
        {field} categories: relation
    }
    class Like {
        {field} id: int
        {field} likeAt: dateTimeInterface
    }
    class Menu {
        {field} id: int
        {field} name: string
        {field} description: text
        {field} price: float
        {field} cartItems: relation
        {field} category: relation
    }
    class Order {
        {field} id: int
        {field} orderNumber: string
        {field} orderedAt: dateTimeInterface
        {field} totalPrice: float
        {field} deliveryAddress: relation
        {field} consumer: relation
        {field} orderMenus: relation
    }
    class OrderMenu {
        {field} id: int
        {field} quantity: integer
        {field} orders: relation
        {field} menu: relation
    }
    class PaymentMethod {
        {field} id: int
        {field} identifier: string
        {field} name: string
        {field} orders: relation
    }
    class Restaurant {
        {field} id: int
        {field} name: string
        {field} number: string
        {field} opensAt: time
        {field} closesAt: time
        {field} enabled: boolean
        {field} published: boolean
        {field} createdAt: dateTimeInterface
        {field} category: relation
    }

    class StripeClient {
        {field} id: int
        {field} accountId: string
        {field} stripePublishableKey: string
        {field} restaurant: relation
    }

    class Social {
        {field} id: int
        {field} name: string
        {field} shortcode: string
        {field} socialLinks: relation
    }

    class SocialLink {
        {field} id: int
        {field} url: string
        {field} type: relation
        {field} user: relation
    }

    class Biker {
        {field} id: int
        {field} entrepriseCode: string
        {field} RightToCreateEnterprise: boolean
        {field} birthdayDate: dateTimeInterface
        {field} sponsorship: string
        {field} iban: string
        {field} transportation: string
        {field} cityWorkWith: relation
        {field} courses: relation
    }

    class Course {
        {field} id: int
        {field} client: string
        {field} deliverabilityTime: dateTimeInterface
        {field} biker: relation
        {field} coursePrice: relation
    }

    class CoursePrice {
        {field} id: int
        {field} atRestaurant: boolean
        {field} distance: float
        {field} getAtClient: boolean
        {field} costs: boolean
        {field} course: relation
    }

    User "Many" --* "One" Gender : To
    User "Many" *--* "Many" Address : To
    User "One" --* "Many" Comment : To
    User "One" --* "Many" DisLike : To
    User "One" --* "Many" Like : To

    Address "Many" --* "One" City : To

    Cart "One" --* "One" User : To
    Cart "One" --* "Many" CartItem : To

    Image "Many" --* "One" User : To
    Image "Many" --* "One" Category : To

    Menu "One" --* "Many" CartItem : To
    Menu "Many" --* "One" Category : To
    Menu "Many" *--* "Many" Comment : To
    Menu "Many" --* "One" Image : To

    OrderMenu "Many" --* "One" Order : To
    OrderMenu "Many" --* "One" Menu : To

    Order "Many" --* "One" Address : To
    Order "Many" --* "One" User : To
    Order "One" --* "Many" OrderMenu : To

    PaymentMethod "One" --* "Many" Order : To

    Restaurant "Many" *--* "One" Category : To
    Restaurant "One" --* "One" User : To
    Restaurant "One" --* "Many" User : To
    Restaurant "One" *--* "Many" DisLike : To
    Restaurant "One" --* "Many" Like : To
    Restaurant "Many" --* "Many" Order : To
    Restaurant "Many" --* "One" City : To
    Restaurant "One" --* "Many" Menu : To
    Restaurant "Many" --* "One" Address : To

    StripeClient "One" --* "One" Restaurant : To

    Social "One" --* "Many" SocialLink : To
    SocialLink "Many" --* "One" User : To

    Biker "One" --* "Many" Course : To
    Biker "One" --* "One" User : To
    City "One" --* "Many" Biker : To
    Course "One" --* "One" CoursePrice : To
}
@enduml
